k8s/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gc-webreact
  namespace: #{ENV}#
  labels:
    app: GC.WebReact
    tier: web
spec:
  replicas: #{REPLICAS}#
  selector:
    matchLabels:
      app: GC.WebReact
      tier: web
  template:
    metadata:
      labels:
        app: GC.WebReact
        tier: web
    spec:
      containers:
      - name: gc-webreact
        image: #{IMAGE}#
        ports:
        - containerPort: 80
