k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gc-webreact
  namespace: #{ENV}#
  labels:
    app: GC.WebReact
    tier: web
spec:
  type: ClusterIP
  selector:
    app: GC.WebReact
    tier: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
