k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gc-webreact
  namespace: #{ENV}#
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: webreact-#{ENV}#.#{DNS_ZONE}#
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gc-webreact
            port:
              number: 80
